--- a/modes/villagermb/config/villagermb.yaml
+++ b/modes/villagermb/config/villagermb.yaml
@@ -40,6 +40,7 @@ shots:
 event_player:
   mode_villagermb_started:
     outlanegate_close
+    show_multiplier
   villager_jackpot_hit:
     outlanegate_open
     
