--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -66,7 +66,7 @@ variable_player:
 
     #Item 2 Settings
     world_item2_name:
-      string: "Cobble Stone"
+      string: "Cobblestone"
       action: set 
     world_item2_color:
       string: "BROWN"
