--- a/modes/world4/config/world4.yaml
+++ b/modes/world4/config/world4.yaml
@@ -66,7 +66,7 @@ variable_player:
 
     #Item 2 Settings
     world_item2_name:
-      string: "Mossy Cobble"
+      string: "Mossy Cobblestone"
       action: set 
     world_item2_color:
       string: "GRAY"
