--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -246,16 +246,16 @@ event_player:
    
   #Left Loop Hit Events:
   loopleft_hit{current_player.diverter_state=="multiballnether"}: diverter_leftloophit
-  loopleft_hit{current_player.diverter_state=="worldtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
-  loopleft_hit{current_player.diverter_state=="strongholdtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
+  loopleft_hit{current_player.diverter_state=="worldtravel"}: diverter_leftloophit
+  loopleft_hit{current_player.diverter_state=="strongholdtravel"}: diverter_leftloophit
   loopleft_hit{current_player.diverter_state=="theendvictory"}: diverter_leftloophit
   loopleft_hit{current_player.diverter_state=="multiballnight"}: diverter_leftloophit
-  loopleft_hit{current_player.diverter_state=="theendtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
-  loopleft_hit{current_player.diverter_state=="worldnight"}: diverter_leftloophit, diverter_leftlooptravelhit
-  loopleft_hit{current_player.diverter_state=="worldnightvillagersidelock"}: diverter_leftloophit, diverter_leftlooptravelhit
+  loopleft_hit{current_player.diverter_state=="theendtravel"}: diverter_leftloophit
+  loopleft_hit{current_player.diverter_state=="worldnight"}: diverter_leftloophit
+  loopleft_hit{current_player.diverter_state=="worldnightvillagersidelock"}: diverter_leftloophit
   
 
-  #DIVERTER CONTROLS
+  #TRAVEL DIVERTER CONTROLS
   divertercontrol_statechanged{current_player.diverter_state=="worldtravel" or current_player.diverter_state == "strongholdtravel" or current_player.diverter_state == "theendtravel" or current_player.diverter_state == "worldnight" or current_player.diverter_state == "worldnightvillagersidelock"}:
     diverter_travel_enabled
 
