--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -573,6 +573,10 @@ widgets:
 
 
 widget_player:
+  s_maint_active:
+    widget_debug:
+      action: add
+
   show_debug:
     widget_debug:
       action: add
