--- a/modes/theend/config/theend.yaml
+++ b/modes/theend/config/theend.yaml
@@ -384,7 +384,7 @@ event_player:
   slide_theend_slide_active:
     show_player_score
     show_ball_count
-    show_debug
+    #show_debug
 
   state_battle_started:
     advance_dragon_shots
