--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,9 +1,9 @@
 events:
-  game_ended: 282
-  game_started: 1244
+  game_ended: 284
+  game_started: 1250
 player:
   score:
-    average: 14640033.713355042
+    average: 14593132.847896434
     top:
     - 883927500
     - 492815500
@@ -15,21 +15,23 @@ player:
     - 96631950
     - 95540050
     - 84762250
-    total: 307
+    total: 309
 shots:
-  award_extraball: 109
-  captiveball: 997
+  award_extraball: 110
+  captiveball: 1003
   centertarget: 1541
-  collectitem1: 5853
-  collectitem2: 5764
-  collectitem3: 4576
-  collectitem4: 5505
+  collectitem1: 5871
+  collectitem2: 5786
+  collectitem3: 4598
+  collectitem4: 5526
   collectitem5: 1881
-  collectitem_special: 2378
-  craft1: 736
-  craft2: 804
-  craft3: 783
-  craft4: 797
+  collectitem_special: 2396
+  collectleftoutlane: 41
+  collectrightinlane: 30
+  craft1: 740
+  craft2: 808
+  craft3: 790
+  craft4: 801
   enderdragon_shot: 1335
   enderdragon_shot1: 213
   enderdragon_shot10: 195
@@ -49,9 +51,9 @@ shots:
   enderdragon_shot8: 104
   enderdragon_shot9: 113
   eyespinner: 838
-  leftslingshot: 6578
-  loopleft: 6289
-  loopright: 5171
+  leftslingshot: 6605
+  loopleft: 6337
+  loopright: 5206
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -60,16 +62,16 @@ shots:
   mb_drop6: 694
   mb_jackpot: 31
   mb_superjackpot: 55
-  mbnether_drop2: 621
-  mbnether_drop3: 626
-  mbnether_drop4: 230
-  mbnether_drop5: 558
+  mbnether_drop2: 628
+  mbnether_drop3: 636
+  mbnether_drop4: 232
+  mbnether_drop5: 564
   mbnether_jackpot: 21
   mbnether_superjackpot: 23
-  popbumper1: 7595
-  popbumper2: 10904
-  popbumper3: 14437
-  rightslingshot: 5248
+  popbumper1: 7646
+  popbumper2: 10974
+  popbumper3: 14599
+  rightslingshot: 5305
   set1_center: 86
   set1_left: 189
   set1_right: 342
@@ -85,68 +87,68 @@ shots:
   shot_travel: 72
   shot_victoryloopleft: 36
   shot_victoryloopright: 28
-  skill_scoup: 636
-  spinner: 27935
+  skill_scoup: 637
+  spinner: 28024
   strongholdtravel: 46
-  tool1: 2708
-  tool2: 3431
-  tool3: 2241
+  tool1: 2733
+  tool2: 3472
+  tool3: 2254
   victoryloopleft_shot: 179
   victoryloopright_shot: 106
   village_jackpot: 22
   villager_jackpot: 171
   villager_spinner: 114
-  world_jackpot: 674
-  worldspinner: 4138
+  world_jackpot: 692
+  worldspinner: 4221
 switches:
-  s_bumperrail: 9629
-  s_captiveball: 999
-  s_centertarget: 6725
-  s_collectitem1: 10059
-  s_collectitem2: 10030
-  s_collectitem3: 5947
-  s_collectitem4: 9562
-  s_collectitem5: 9256
+  s_bumperrail: 9662
+  s_captiveball: 1005
+  s_centertarget: 6773
+  s_collectitem1: 10111
+  s_collectitem2: 10070
+  s_collectitem3: 5973
+  s_collectitem4: 9601
+  s_collectitem5: 9288
   s_credit_right: 0
-  s_drop1: 3927
-  s_drop2: 6132
-  s_drop3: 22356
-  s_drop4: 3880
-  s_drop5: 8085
-  s_drop6: 5333
-  s_left_flipper: 49857
-  s_leftinlane: 1069
-  s_leftoutlane: 923
-  s_leftsling: 6581
-  s_loopleft: 6628
-  s_loopright: 5934
+  s_drop1: 3948
+  s_drop2: 6161
+  s_drop3: 22491
+  s_drop4: 3902
+  s_drop5: 8119
+  s_drop6: 5355
+  s_left_flipper: 50236
+  s_leftinlane: 1078
+  s_leftoutlane: 968
+  s_leftsling: 6608
+  s_loopleft: 6676
+  s_loopright: 5969
   s_maint: 48
-  s_plungerlane: 5149
-  s_popbumper1: 7595
-  s_popbumper2: 10904
-  s_popbumper3: 14438
-  s_portal: 973
-  s_right_flipper: 42575
-  s_rightinlane: 310
-  s_rightoutlane: 391
-  s_rightsling: 5248
-  s_scoup: 3136
-  s_spinner: 27938
+  s_plungerlane: 5177
+  s_popbumper1: 7646
+  s_popbumper2: 10974
+  s_popbumper3: 14600
+  s_portal: 991
+  s_right_flipper: 42856
+  s_rightinlane: 348
+  s_rightoutlane: 395
+  s_rightsling: 5305
+  s_scoup: 3163
+  s_spinner: 28027
   s_start: 67
   s_tilt: 0
-  s_tooltarget1: 4076
-  s_tooltarget2: 5075
-  s_tooltarget3: 3311
-  s_topbumperleft: 2498
-  s_topbumperright: 3581
-  s_topkicker: 9220
-  s_trough1: 4669
-  s_trough2: 3845
-  s_trough3: 3362
-  s_trough4: 2994
-  s_troughjam: 3905
-  s_upperdrop: 3837
-  s_whitedot1: 1650
-  s_whitedot2: 1978
-  s_whitedot3: 1992
-  s_whitedot4: 1925
+  s_tooltarget1: 4108
+  s_tooltarget2: 5117
+  s_tooltarget3: 3328
+  s_topbumperleft: 2512
+  s_topbumperright: 3600
+  s_topkicker: 9284
+  s_trough1: 4688
+  s_trough2: 3863
+  s_trough3: 3378
+  s_trough4: 3010
+  s_troughjam: 3923
+  s_upperdrop: 3865
+  s_whitedot1: 1654
+  s_whitedot2: 1983
+  s_whitedot3: 2002
+  s_whitedot4: 1930
