--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -92,6 +92,7 @@ shots:
   collectitem1:
     switch: s_collectitem1
     profile: collectshot
+    hit_events: collectitem1_collected
     show_tokens:
       leds: l_collectitem1
     enable_events: collectitem1_enabled
@@ -99,6 +100,7 @@ shots:
   collectitem2:
     switch: s_collectitem2
     profile: collectshot
+    hit_events: collectitem2_collected
     show_tokens:
       leds: l_collectitem2
     enable_events: collectitem2_enabled
@@ -106,6 +108,7 @@ shots:
   collectitem3:
     switch: s_collectitem4
     profile: collectshot
+    hit_events: collectitem3_collected
     show_tokens:
       leds: l_collectitem4
     enable_events: collectitem3_enabled
@@ -113,6 +116,7 @@ shots:
   collectitem4:
     switch: s_collectitem5
     profile: collectshot
+    hit_events: collectitem4_collected
     show_tokens:
       leds: l_collectitem5
     enable_events: collectitem4_enabled
@@ -605,23 +609,23 @@ event_player:
 
   # INLANE / OUTLANE ITEM COLLECTORS
   collectleftoutlane_hit{current_player.world_item1_remaining > 0}:
-    collectitem1_hit
+    collectitem1_collected
   collectleftoutlane_hit{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining > 0}:
-    collectitem2_hit
+    collectitem2_collected
   collectleftoutlane_hit{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining > 0}:
-    collectitem3_hit
+    collectitem3_collected
   collectleftoutlane_hit{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining > 0}:
-    collectitem4_hit
+    collectitem4_collected
 
 
   collectrightinlane_hit{current_player.world_item4_remaining > 0}:
-    collectitem4_hit
+    collectitem4_collected
   collectrightinlane_hit{current_player.world_item4_remaining == 0 and current_player.world_item3_remaining > 0}:
-    collectitem3_hit
+    collectitem3_collected
   collectrightinlane_hit{current_player.world_item4_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item2_remaining > 0}:
-    collectitem2_hit
+    collectitem2_collected
   collectrightinlane_hit{current_player.world_item4_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item1_remaining > 0}:
-    collectitem1_hit
+    collectitem1_collected
   
 
   # CHECK IF ITEMS ARE COMPLETED
